# quarto-game

./: Annotations_en_US.ts  Annotations_fr_FR.ts  CMakeLists.txt  README.md  dessin.cpp  dessin.hh  grille.cpp  grille.hh  grilledes.cpp  grilledes.hh  jeu.cpp  jeu.hh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  piece.cpp  piece.hh
